src/query/parser/grammar/mql/autogenerated/MQL_Parser.cc

// Generated from MQL_Parser.g4 by ANTLR 4.13.1


#include "MQL_ParserVisitor.h"

#include "MQL_Parser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct MQL_ParserStaticData final {
  MQL_ParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  MQL_ParserStaticData(const MQL_ParserStaticData&) = delete;
  MQL_ParserStaticData(MQL_ParserStaticData&&) = delete;
  MQL_ParserStaticData& operator=(const MQL_ParserStaticData&) = delete;
  MQL_ParserStaticData& operator=(MQL_ParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag mql_parserParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
MQL_ParserStaticData *mql_parserParserStaticData = nullptr;

void mql_parserParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (mql_parserParserStaticData != nullptr) {
    return;
  }
#else
  assert(mql_parserParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<MQL_ParserStaticData>(
    std::vector<std::string>{
      "root", "updateStatement", "insertStatement", "insertLinearPattern", 
      "insertNode", "insertEdge", "insertProperties", "insertProperty", 
      "deleteStatement", "setStatement", "setAtom", "removeStatement", "removeAtom", 
      "simpleQuery", "primitiveStatement", "createIndexQuery", "createIndexOptions", 
      "createIndexOption", "showQuery", "describeQuery", "describeFlag", 
      "matchStatement", "letStatement", "letDefinition", "whereStatement", 
      "groupByStatement", "havingStatement", "orderByStatement", "returnStatement", 
      "callStatement", "yieldStatement", "yieldItem", "callArguments", "limitOffsetClauses", 
      "limitClause", "offsetClause", "returnItem", "alias", "aggregateFunc", 
      "orderByItem", "groupByItem", "graphPattern", "optionalPattern", "basicPattern", 
      "linearPattern", "path", "pathAlternatives", "pathSequence", "pathAtom", 
      "pathSuffix", "pathType", "node", "fixedNode", "fixedObj", "varNode", 
      "edge", "edgeInside", "properties", "property", "conditionalOrType", 
      "identifier", "boolValue", "numericValue", "datatypeValue", "value", 
      "conditionalOrExpr", "conditionalAndExpr", "comparisonExpr", "additiveExpr", 
      "multiplicativeExpr", "unaryExpr", "atomicExpr", "function", "regex", 
      "cosineSimilarity", "cosineDistance", "manhattanDistance", "euclideanDistance", 
      "editDistance", "normalize", "str", "labels", "propertiesFunction", 
      "textSearchIndexMode", "exprTypename", "keyword"
    },
    std::vector<std::string>{
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "'false'", 
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "", "'true'", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "", "", "", "", "", "", "", "", "'<='", "'>='", "'=='", "'!='", "'<'", 
      "'>'", "'='", "'/'", "'|'", "'^'", "'*'", "'%'", "'\\u003F'", "'+'", 
      "'-'", "'('", "')'", "'{'", "'}'", "'['", "']'", "','", "':'"
    },
    std::vector<std::string>{
      "", "K_ACYCLIC", "K_AND", "K_ANY", "K_AS", "K_AVG", "K_ALL", "K_ASC", 
      "K_BY", "K_BOOL", "K_CALL", "K_COSINE_DISTANCE", "K_COSINE_SIMILARITY", 
      "K_COUNT", "K_CREATE", "K_DELETE", "K_DESCRIBE", "K_DESC", "K_DETACH", 
      "K_DIMENSIONS", "K_DISTINCT", "K_EDGE", "K_EDIT_DISTANCE", "K_EUCLIDEAN_DISTANCE", 
      "K_FROM", "K_HAVING", "K_IDENTITY", "K_INCOMING", "K_INDEX", "K_INSERT", 
      "K_INTEGER", "K_INTO", "K_IS", "K_FALSE", "K_FLOAT", "K_GROUP", "K_GROUPS", 
      "K_LABELS", "K_LABEL", "K_LET", "K_LIMIT", "K_MANHATTAN_DISTANCE", 
      "K_MATCH", "K_MAX", "K_MIN", "K_NORMALIZE", "K_OBJECTS", "K_OFFSET", 
      "K_OPTIONAL", "K_ORDER", "K_OR", "K_OUTGOING", "K_PREFIX", "K_PROPERTY", 
      "K_PROPERTIES", "K_NOT", "K_NULL", "K_SHORTEST", "K_SHOW", "K_SIMPLE", 
      "K_STRING", "K_STR", "K_TEXT_SEARCH", "K_TYPE", "K_REGEX", "K_REMOVE", 
      "K_RETURN", "K_SET", "K_SUM", "K_TRUE", "K_TRAILS", "K_VALUES", "K_WALKS", 
      "K_WITH", "K_WHERE", "K_YIELD", "TRUE_PROP", "FALSE_PROP", "ANON_ID", 
      "EDGE_ID", "UUID", "HEX", "KEY", "LABEL", "LABEL_VAR", "VARIABLE", 
      "STRING", "UNSIGNED_INTEGER", "UNSIGNED_FLOAT", "UNSIGNED_SCIENTIFIC_NOTATION", 
      "NAME", "LEQ", "GEQ", "EQ", "NEQ", "LT", "GT", "SINGLE_EQ", "PATH_SEQUENCE", 
      "PATH_ALTERNATIVE", "PATH_NEGATION", "STAR", "PERCENT", "QUESTION_MARK", 
      "PLUS", "MINUS", "L_PAR", "R_PAR", "LCURLY_BRACKET", "RCURLY_BRACKET", 
      "LSQUARE_BRACKET", "RSQUARE_BRACKET", "COMMA", "COLON", "WHITE_SPACE", 
      "SINGLE_LINE_COMMENT", "UNRECOGNIZED"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  mql_parserParserStaticData = staticData.release();
}

}

MQL_Parser::MQL_Parser(TokenStream *input) : MQL_Parser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

MQL_Parser::MQL_Parser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  MQL_Parser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *mql_parserParserStaticData->atn, mql_parserParserStaticData->decisionToDFA, mql_parserParserStaticData->sharedContextCache, options);
}

MQL_Parser::~MQL_Parser() {
  delete _interpreter;
}

const atn::ATN& MQL_Parser::getATN() const {
  return *mql_parserParserStaticData->atn;
}

std::string MQL_Parser::getGrammarFileName() const {
  return "MQL_Parser.g4";
}

const std::vector<std::string>& MQL_Parser::getRuleNames() const {
  return mql_parserParserStaticData->ruleNames;
}

const dfa::Vocabulary& MQL_Parser::getVocabulary() const {
  return mql_parserParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView MQL_Parser::getSerializedATN() const {
  return mql_parserParserStaticData->serializedATN;
}


//----------------- RootContext ------------------------------------------------------------------

MQL_Parser::RootContext::RootContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* MQL_Parser::RootContext::EOF() {
  return getToken(MQL_Parser::EOF, 0);
}

MQL_Parser::SimpleQueryContext* MQL_Parser::RootContext::simpleQuery() {
  return getRuleContext<MQL_Parser::SimpleQueryContext>(0);
}

MQL_Parser::DescribeQueryContext* MQL_Parser::RootContext::describeQuery() {
  return getRuleContext<MQL_Parser::DescribeQueryContext>(0);
}

MQL_Parser::CreateIndexQueryContext* MQL_Parser::RootContext::createIndexQuery() {
  return getRuleContext<MQL_Parser::CreateIndexQueryContext>(0);
}

MQL_Parser::ShowQueryContext* MQL_Parser::RootContext::showQuery() {
  return getRuleContext<MQL_Parser::ShowQueryContext>(0);
}

MQL_Parser::UpdateStatementContext* MQL_Parser::RootContext::updateStatement() {
  return getRuleContext<MQL_Parser::UpdateStatementContext>(0);
}


size_t MQL_Parser::RootContext::getRuleIndex() const {
  return MQL_Parser::RuleRoot;
}


std::any MQL_Parser::RootContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MQL_ParserVisitor*>(visitor))
    return parserVisitor->visitRoot(this);
  else
    return visitor->visitChildren(this);
}

MQL_Parser::RootContext* MQL_Parser::root() {
  RootContext *_localctx = _tracker.createInstance<RootContext>(_ctx, getState());
  enterRule(_localctx, 0, MQL_Parser::RuleRoot);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(177);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case MQL_Parser::K_CALL:
      case MQL_Parser::K_LET:
      case MQL_Parser::K_MATCH:
      case MQL_Parser::K_WHERE: {
        setState(172);
        simpleQuery();
        break;
      }

      case MQL_Parser::K_DESCRIBE: {
        setState(173);
        describeQuery();
        break;
      }

      case MQL_Parser::K_CREATE: {
        setState(174);
        createIndexQuery();
        break;
      }

      case MQL_Parser::K_SHOW: {
        setState(175);
        showQuery();
        break;
      }

      case MQL_Parser::K_DELETE:
      case MQL_Parser::K_DETACH:
      case MQL_Parser::K_INSERT:
      case MQL_Parser::K_REMOVE:
      case MQL_Parser::K_SET: {
        setState(176);
        updateStatement();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
    setState(179);
    match(MQL_Parser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- UpdateStatementContext ------------------------------------------------------------------

MQL_Parser::UpdateStatementContext::UpdateStatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

MQL_Parser::InsertStatementContext* MQL_Parser::UpdateStatementContext::insertStatement() {
  return getRuleContext<MQL_Parser::InsertStatementContext>(0);
}

MQL_Parser::DeleteStatementContext* MQL_Parser::UpdateStatementContext::deleteStatement() {
  return getRuleContext<MQL_Parser::DeleteStatementContext>(0);
}

MQL_Parser::SetStatementContext* MQL_Parser::UpdateStatementContext::setStatement() {
  return getRuleContext<MQL_Parser::SetStatementContext>(0);
}

MQL_Parser::RemoveStatementContext* MQL_Parser::UpdateStatementContext::removeStatement() {
  return getRuleContext<MQL_Parser::RemoveStatementContext>(0);
}


size_t MQL_Parser::UpdateStatementContext::getRuleIndex() const {
  return MQL_Parser::RuleUpdateStatement;
}


std::any MQL_Parser::UpdateStatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MQL_ParserVisitor*>(visitor))
    return parserVisitor->visitUpdateStatement(this);
  else
    return visitor->visitChildren(this);
}

MQL_Parser::UpdateStatementContext* MQL_Parser::updateStatement() {
  UpdateStatementContext *_localctx = _tracker.createInstance<UpdateStatementContext>(_ctx, getState());
  enterRule(_localctx, 2, MQL_Parser::RuleUpdateStatement);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(185);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case MQL_Parser::K_INSERT: {
        enterOuterAlt(_localctx, 1);
        setState(181);
        insertStatement();
        break;
      }

      case MQL_Parser::K_DELETE:
      case MQL_Parser::K_DETACH: {
        enterOuterAlt(_localctx, 2);
        setState(182);
        deleteStatement();
        break;
      }

      case MQL_Parser::K_SET: {
        enterOuterAlt(_localctx, 3);
        setState(183);
        setStatement();
        break;
      }

      case MQL_Parser::K_REMOVE: {
        enterOuterAlt(_localctx, 4);
        setState(184);
        removeStatement();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- InsertStatementContext ------------------------------------------------------------------

MQL_Parser::InsertStatementContext::InsertStatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* MQL_Parser::InsertStatementContext::K_INSERT() {
  return getToken(MQL_Parser::K_INSERT, 0);
}

std::vector<MQL_Parser::InsertLinearPatternContext *> MQL_Parser::InsertStatementContext::insertLinearPattern() {
  return getRuleContexts<MQL_Parser::InsertLinearPatternContext>();
}

MQL_Parser::InsertLinearPatternContext* MQL_Parser::InsertStatementContext::insertLinearPattern(size_t i) {
  return getRuleContext<MQL_Parser::InsertLinearPatternContext>(i);
}

std::vector<tree::TerminalNode *> MQL_Parser::InsertStatementContext::COMMA() {
  return getTokens(MQL_Parser::COMMA);
}

tree::TerminalNode* MQL_Parser::InsertStatementContext::COMMA(size_t i) {
  return getToken(MQL_Parser::COMMA, i);
}


size_t MQL_Parser::InsertStatementContext::getRuleIndex() const {
  return MQL_Parser::RuleInsertStatement;
}


std::any MQL_Parser::InsertStatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MQL_ParserVisitor*>(visitor))
    return parserVisitor->visitInsertStatement(this);
  else
    return visitor->visitChildren(this);
}

MQL_Parser::InsertStatementContext* MQL_Parser::insertStatement() {
  InsertStatementContext *_localctx = _tracker.createInstance<InsertStatementContext>(_ctx, getState());
  enterRule(_localctx, 4, MQL_Parser::RuleInsertStatement);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(187);
    match(MQL_Parser::K_INSERT);
    setState(188);
    insertLinearPattern();
    setState(193);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == MQL_Parser::COMMA) {
      setState(189);
      match(MQL_Parser::COMMA);
      setState(190);
      insertLinearPattern();
      setState(195);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- InsertLinearPatternContext ------------------------------------------------------------------

MQL_Parser::InsertLinearPatternContext::InsertLinearPatternContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<MQL_Parser::InsertNodeContext *> MQL_Parser::InsertLinearPatternContext::insertNode() {
  return getRuleContexts<MQL_Parser::InsertNodeContext>();
}

MQL_Parser::InsertNodeContext* MQL_Parser::InsertLinearPatternContext::insertNode(size_t i) {
  return getRuleContext<MQL_Parser::InsertNodeContext>(i);
}

std::vector<MQL_Parser::InsertEdgeContext *> MQL_Parser::InsertLinearPatternContext::insertEdge() {
  return getRuleContexts<MQL_Parser::InsertEdgeContext>();
}

MQL_Parser::InsertEdgeContext* MQL_Parser::InsertLinearPatternContext::insertEdge(size_t i) {
  return getRuleContext<MQL_Parser::InsertEdgeContext>(i);
}


size_t MQL_Parser::InsertLinearPatternContext::getRuleIndex() const {
  return MQL_Parser::RuleInsertLinearPattern;
}


std::any MQL_Parser::InsertLinearPatternContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MQL_ParserVisitor*>(visitor))
    return parserVisitor->visitInsertLinearPattern(this);
  else
    return visitor->visitChildren(this);
}

MQL_Parser::InsertLinearPatternContext* MQL_Parser::insertLinearPattern() {
  InsertLinearPatternContext *_localctx = _tracker.createInstance<InsertLinearPatternContext>(_ctx, getState());
  enterRule(_localctx, 6, MQL_Parser::RuleInsertLinearPattern);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(196);
    insertNode();
    setState(202);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == MQL_Parser::LT

    || _la == MQL_Parser::MINUS) {
      setState(197);
      insertEdge();
      setState(198);
      insertNode();
      setState(204);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- InsertNodeContext ------------------------------------------------------------------

MQL_Parser::InsertNodeContext::InsertNodeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* MQL_Parser::InsertNodeContext::L_PAR() {
  return getToken(MQL_Parser::L_PAR, 0);
}

tree::TerminalNode* MQL_Parser::InsertNodeContext::R_PAR() {
  return getToken(MQL_Parser::R_PAR, 0);
}

MQL_Parser::FixedNodeContext* MQL_Parser::InsertNodeContext::fixedNode() {
  return getRuleContext<MQL_Parser::FixedNodeContext>(0);
}

tree::TerminalNode* MQL_Parser::InsertNodeContext::VARIABLE() {
  return getToken(MQL_Parser::VARIABLE, 0);
}

std::vector<tree::TerminalNode *> MQL_Parser::InsertNodeContext::LABEL() {
  return getTokens(MQL_Parser::LABEL);
}

tree::TerminalNode* MQL_Parser::InsertNodeContext::LABEL(size_t i) {
  return getToken(MQL_Parser::LABEL, i);
}

MQL_Parser::InsertPropertiesContext* MQL_Parser::InsertNodeContext::insertProperties() {
  return getRuleContext<MQL_Parser::InsertPropertiesContext>(0);
}


size_t MQL_Parser::InsertNodeContext::getRuleIndex() const {
  return MQL_Parser::RuleInsertNode;
}


std::any MQL_Parser::InsertNodeContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MQL_ParserVisitor*>(visitor))
    return parserVisitor->visitInsertNode(this);
  else
    return visitor->visitChildren(this);
}

MQL_Parser::InsertNodeContext* MQL_Parser::insertNode() {
  InsertNodeContext *_localctx = _tracker.createInstance<InsertNodeContext>(_ctx, getState());
  enterRule(_localctx, 8, MQL_Parser::RuleInsertNode);
  size_t _la = 0;
